--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 <header>
 <background>
-
 <img alt="Credit: wallpapersafari.com user Martin Driver" title="Credit: wallpapersafari.com user Martin Driver" src="http://i.imgur.com/ldEr4NE.jpg?2">
 </background>
 </header>
@@ -30,29 +29,8 @@
 <div class="para"><p align="justify">The anime story is set in a distant future in which all of Tokyo is controlled by a public security system called Sibyl. Sibyl is responsible for scanning the mental states of Tokyo's residents and recommending urgent therapy to those who are in mild distress or implementing emergency action to detain those whose stress levels have become 'dangerous'. Sibyl also provides security task force employees with information about a person's Crime Coefficient- a calculation of their likelihood of committing a crime and authorises appropriate action when the Crime Coefficient rises above a safe level. All in all, the Sibyl system has taken almost all important decisions out of the hands of average citizens and provided the framework for a peaceful existence...</p></div><br />
 
 <div class="characters">
-<h3>Meet some main characters:</h3>
+<h3><a href= "index2.html">Meet some main characters</a></h3>
 </div>
-
-<div class="akane">
-<img alt="Credit: wallpapersafari.com user Martin Driver" title="Credit: blog.draggle.org" src="http://i.imgur.com/IcpvPD8.jpg"></div>
-<div class="akanetext">
-  <p>Inspector Tsunemori Akane<span class="role">Lead character</span><br />
-  <small>We meet this rookie detective on her first day in the job and follow her as she tries to get to know the members of the team and struggles with the morality of day-to-day crime-fighting under the Sibyl system's authority.</small></p></div>
-<br />
-
-<div class="kogami">
-<img alt="Credit: wallpapersafari.com user Martin Driver" title="Credit: psychopass.wikia.com" src="http://i.imgur.com/JKaQ8B4.png"></div>
-  <div class="kogamitext">
-  <p>Kogami Shinya<span class="role">Troubled hero</span><br />
-  <small>An enforcer under Akane's supervision. His quick-thinking often outsmarts the criminals and saves the team but there is one criminal mastermind he still hasn't caught up with. Can be reckless at times but his heart's in the right place. Likes reading old books.</small></p></div>
-<br />
-  
-<div class="makishima">
-<img alt="Credit: wallpapersafari.com user Martin Driver" title="Credit: psychopass.wikia.com" src="http://i.imgur.com/B6wAQJd.png"></div>
-<div class="makishimatext">
-  <p>Makishima Shogo<span class="role">Villain of the piece</span><br />
-  <small>A man with a plan to destroy the existing Sibyl system and start a social revolution. Has great hair. Also likes old books.</small></p></div>
-<br />
 
 <div class="button">
 <!--button id="ContactMe">Contact me!</button-->
