changed 'meet the characters' style
removed green background and changed style to p

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="para"><p align="justify">The anime story is set in a distant future in which all of Tokyo is controlled by a public security system called Sibyl. Sibyl is responsible for scanning the mental states of Tokyo's residents and recommending urgent therapy to those who are in mild distress or implementing emergency action to detain those whose stress levels have become 'dangerous'. Sibyl also provides security task force employees with information about a person's Crime Coefficient- a calculation of their likelihood of committing a crime and authorises appropriate action when the Crime Coefficient rises above a safe level. All in all, the Sibyl system has taken almost all important decisions out of the hands of average citizens and provided the framework for a peaceful existence...</p></div><br />
 
 <div class="characters">
-<h3><a href= "index2.html">Meet some main characters</a></h3>
+<p><a href= "index2.html">Meet some main characters</a></p>
 </div>
 
 <div class="button">
