moved characters and added new heading
moved makishima to end, moved characters horizontal positions to
compensate. added makishima's intro heading

--- a/index2.html
+++ b/index2.html
@@ -22,13 +22,6 @@
   <p>Kogami Shinya<span class="role">Troubled hero</span><br />
   <small>An enforcer under Akane's supervision. His quick-thinking often outsmarts the criminals and saves the team but there is one criminal mastermind he still hasn't caught up with. Can be reckless at times but his heart's in the right place. Likes reading old books.</small></p></div>
 <br />
-  
-<div class="makishima">
-<img alt="Credit: psychopass.wikia.com" title="Credit: psychopass.wikia.com" src="http://i.imgur.com/B6wAQJd.png"></div>
-<div class="makishimatext">
-  <p>Makishima Shogo<span class="role">Villain of the piece</span><br />
-  <small>A man with a plan to destroy the existing Sibyl system and start a social revolution. Has great hair. Also likes old books.</small></p></div>
-<br />
 
 <div class="ginoza">
 <img alt="Credit: uk.pinterest.com/darkkittens/psycho-pass/" title="Credit: uk.pinterest.com/darkkittens/psycho-pass/" src="http://i.imgur.com/lsoNrE6.png"></div>
@@ -49,6 +42,17 @@
 <div class="yayoitext">
   <p>Kunizuka Yayoi<span class="role">Rockstar-turned enforcer</span><br />
   <small>Once a promising musician, Yayoi's psycho-pass got clouded and she was recruited to the team by Kogami. She is known for being level-headed but also shows a caring side every once in a while.</small></p></div>
+<br />
+
+<div>
+<h3>And the man who fighting against them</h3>
+</div>
+
+<div class="makishima">
+<img alt="Credit: psychopass.wikia.com" title="Credit: psychopass.wikia.com" src="http://i.imgur.com/B6wAQJd.png"></div>
+<div class="makishimatext">
+  <p>Makishima Shogo<span class="role">Villain of the piece</span><br />
+  <small>A man with a plan to destroy the existing Sibyl system and start a social revolution. Has great hair. Also likes old books.</small></p></div>
 <br />
 
 <footer>
