added return to main page and changed masaoka img
changed masaoka image and added a return link back to the main page with
new tag h4

--- a/index2.html
+++ b/index2.html
@@ -38,10 +38,24 @@
 <br />
 
 <div class="yayoi">
-<img alt="Credit: http://picsforkeywordsuggestion.com/pages/y/yayoi-kunizuka/" title="http://picsforkeywordsuggestion.com/pages/y/yayoi-kunizuka/" src="http://i.imgur.com/OSu7hjC.jpg"></div>
+<img alt="Credit: picsforkeywordsuggestion.com/pages/y/yayoi-kunizuka/" title="Credit: picsforkeywordsuggestion.com/pages/y/yayoi-kunizuka/" src="http://i.imgur.com/OSu7hjC.jpg"></div>
 <div class="yayoitext">
   <p>Kunizuka Yayoi<span class="role">Rockstar-turned enforcer</span><br />
   <small>Once a promising musician, Yayoi's psycho-pass got clouded and she was recruited to the team by Kogami. She is known for being level-headed but also shows a caring side every once in a while.</small></p></div>
+<br />
+
+<div class="kagari">
+<img alt="Credit: uk.pinterest.com/pin/290974825898464262/" title="Credit: uk.pinterest.com/pin/290974825898464262/" src="http://i.imgur.com/6xUkxvq.jpg"></div>
+<div class="kagaritext">
+  <p>Shusei Kagari<span class="role">Jovial enforcer</span><br />
+  <small>Kagari is another enforcer under Akane's supervision. Fiercely loyal to the other team members, and tries his best to do right by them. He has a keen sense of humour and often tries to lighten everyone's mood.</small></p></div>
+<br />
+
+<div class="masaoka">
+<img alt="Credit: http://newsneta39.blog.fc2.com/blog-entry-2666.html?sp" title="Credit: http://newsneta39.blog.fc2.com/blog-entry-2666.html?sp" src="http://i.imgur.com/ft6Y4JY.jpg"></div>
+<div class="masaokatext">
+  <p>Tomomi Masaoka<span class="role">Father figure/enforcer</span><br />
+  <small>Masaoka is often called by his nickname 'Pops', a reference to his being older than the other team members and quite like a father figure. He has been working in this job a long time and his detective's intuition is rarely wrong.</small></p></div>
 <br />
 
 <div>
@@ -54,6 +68,10 @@
   <p>Makishima Shogo<span class="role">Villain of the piece</span><br />
   <small>A man with a plan to destroy the existing Sibyl system and start a social revolution. Has great hair. Also likes old books.</small></p></div>
 <br />
+
+<div>
+<h4><a href= "index.html">return to main page -></h4>
+</div>
 
 <footer>
 
