added 'return' hyperlink and changed masaoka image
changed masaoka image and added a 'return to main page' link in new tag
h4

--- a/index2.html
+++ b/index2.html
@@ -69,15 +69,17 @@
   <small>A man with a plan to destroy the existing Sibyl system and start a social revolution. Has great hair. Also likes old books.</small></p></div>
 <br />
 
-<div>
+<div class="return">
 <h4><a href= "index.html">return to main page -></h4>
 </div>
+<br />
 
+
+<div>
 <footer>
-
-Laney13 © 2016| All rights reserved <br></br>
+Laney13 © 2016| All rights reserved<br /><br />
 Designed and developed by Lea
-
 </footer>
+</div>
 </body>
 </html>
