added new page and style sheet
created index3 as new page and style3 as new css stylesheet for it.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 <p><a href= "index2.html">Meet some main characters</a></p>
 </div>
 
+<div class="dominators">
+<h3>Dominators</h3>
+</div>
+
 <div class="button">
 <!--button id="ContactMe">Contact me!</button-->
 <input type=button onClick="location.href='contactme.html'" value="Contact me!">
