added introdominator text and adjusted its position
introdominator text is now to the right of the introdominator image

--- a/index3.html
+++ b/index3.html
@@ -15,6 +15,13 @@
 <h3>Dominators: the eyes of Sibyl</h3>
 </div>
 
+<div class="introdominator">
+<img alt="Credit: uk.pinterest.com/iprinny/psycho-pass-gun/" title="Credit: uk.pinterest.com/iprinny/psycho-pass-gun/" src="http://i.imgur.com/Eh87nJw.png"></div>
+<div class="introdominatortext">
+  <p>Dominators</p>
+  <p><small>The guns carried by all inspectors and enforcers in the Public Safety Bureau's Criminal Investigation Division are called Dominators. They are eferred to as the 'eyes of Sibyl' because they are used to check a suspect's criminal coefficient- the measure that decides if they are guilty of a crime or not. The gun then adapts itself to the level of crime coefficient to authorise and administer justice at the appropriate level.</small></p></div>
+<br />
+
 <div class="return">
 <h4><a href= "index.html">return to main page -></h4>
 </div>
