entered max heights for return links
made return links max height 50px

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="dominators">
 <p><a href= "index3.html">Dominators</p>
-</div>
+</div><br/>
 
 <div class="button">
 <!--button id="ContactMe">Contact me!</button-->
