corrected typo in makishima's intro
now reads 'and the man who fights against them'

--- a/index2.html
+++ b/index2.html
@@ -59,7 +59,7 @@
 <br />
 
 <div>
-<h3>And the man who fighting against them</h3>
+<h3>And the man who fights against them</h3>
 </div>
 
 <div class="makishima">
