changed contactme link text
changed contact me hyperlink

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="button">
 <!--button id="ContactMe">Contact me!</button-->
-<input type=button onClick="location.href='contactme.html'" value="Contact me!">
+<input type=button id="ContactMe" onClick="location.href='contactme.html'" value="Contact me!">
 <script type="text/javascript">
 $('#ContactMe').click(function()
 {alert("Please drop me an email at lec1g15@soton.ac.uk. Thank you!");
