changed divisions in footer and 'return' elements
moved <br /> within div tag for 'return' element and removed 'div' tags
for footer element

--- a/index2.html
+++ b/index2.html
@@ -70,16 +70,17 @@
 <br />
 
 <div class="return">
-<h4><a href= "index.html">return to main page -></h4>
-</div>
+<h4><a href= "index.html">return to main page</h4>
 <br />
+</div>
 
 
-<div>
+
+
 <footer>
 Laney13 © 2016| All rights reserved<br /><br />
 Designed and developed by Lea
 </footer>
-</div>
+
 </body>
 </html>
