--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@ $('#ContactMe').click(function()
 <br></br>
 </div>
 
+<div>
 <footer>
 Laney13 © 2016| All rights reserved <br></br>
 Designed and developed by Lea
 </footer>
-
+</div>
 </body>
 
 </html>
