--- a/index3.html
+++ b/index3.html
@@ -27,12 +27,12 @@
 <br />
 </div>
 
+<div>
 <footer>
-
 Laney13 © 2016| All rights reserved <br></br>
 Designed and developed by Lea
-
 </footer>
+</div>
 </body>
 
 </html>
