moved break to outside button element div tags
moved break tag to outside div tags for button element

--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@ $('#ContactMe').click(function()
 {alert("Please drop me an email at lec1g15@soton.ac.uk. Thank you!");
 });
 </script>
-<br />
 </div>
-
+<br />
 
 <footer>
-Laney13 © 2016| All rights reserved <br></br>
+Laney13 © 2016| All rights reserved <br />
 Designed and developed by Lea
 </footer>
 
