added /a closing tags to all hyperlinks that were missing them
found the bug- my <a> tags were missing closing tags in some links.
fixed this now

--- a/index.html
+++ b/index.html
@@ -33,17 +33,12 @@
 </div>
 
 <div class="dominators">
-<p><a href= "index3.html">Dominators</p>
+<p><a href= "index3.html">Dominators</a></p>
 </div><br/>
 
 <div class="button">
 <!--button id="ContactMe">Contact me!</button-->
-<input type=button id="ContactMe" onClick="location.href='contactme.html'" value="Contact me!">
-<script type="text/javascript">
-$('#ContactMe').click(function()
-{alert("Please drop me an email at lec1g15@soton.ac.uk. Thank you!");
-});
-</script>
+<input type=button onClick="location.href='contactme.html'" value="Contact me!">
 </div>
 <br />
 
