--- a/index3.html
+++ b/index3.html
@@ -23,7 +23,7 @@
 <br />
 
 <div class="return">
-<h4><a href= "index.html">return to main page -></h4>
+<h4><a href= "index.html">return to main page -></a></h4>
 <br />
 </div>
 
