fixed br tags in footer
footer break was not appearing in index.html. fixed break tag. it works
now.

--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
 
 
 <footer>
-Laney13 © 2016| All rights reserved<br /><br />
+Laney13 © 2016| All rights reserved<br></br>
 Designed and developed by Lea
 </footer>
 
