--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <br />
 
 <footer>
-Laney13 © 2016| All rights reserved <br />
+Laney13 © 2016| All rights reserved<br></br>
 Designed and developed by Lea
 </footer>
 
