added more content to index3
added dominator level images and text and repositioned to look
consistent

--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,28 @@
 <img alt="Credit: uk.pinterest.com/iprinny/psycho-pass-gun/" title="Credit: uk.pinterest.com/iprinny/psycho-pass-gun/" src="http://i.imgur.com/Eh87nJw.png"></div>
 <div class="introdominatortext">
   <p>Dominators</p>
-  <p><small>The guns carried by all inspectors and enforcers in the Public Safety Bureau's Criminal Investigation Division are called Dominators. They are eferred to as the 'eyes of Sibyl' because they are used to check a suspect's criminal coefficient- the measure that decides if they are guilty of a crime or not. The gun then adapts itself to the level of crime coefficient to authorise and administer justice at the appropriate level.</small></p></div>
+  <p><small>The guns carried by all inspectors and enforcers are called Dominators, often referred to as the 'eyes of Sibyl'. They are used to check a suspect's criminal coefficient- the measure that decides if they are guilty of a crime or not- and the gun then adapts itself to the level of crime coefficient to authorise and administer justice at the appropriate level.</small></p></div>
+<br />
+
+<div class="dominatorlevelstext">
+  <p>Dominator Levels</p></div>
+ <div class="non-lethal">
+ <img alt="Credit: https://myanimelist.net/featured/711/Psycho-Pass__What_a_Wonder_is_a_Gun" title="Credit: myanimelist.net/featured/711/Psycho-Pass__What_a_Wonder_is_a_Gun" src="http://i.imgur.com/TUBC0va.png"></div>
+ <div class="non-lethaltext">
+  <p><small>If a suspect's crime coefficient is less than 100, the dominators will not work on them. If it is 100+ but less than 300 and the dominator mode switches to 'non-lethal paralyser' which renders a suspect immobile so they can be detained.</small></p></div>
+ <div class="lethal-eliminator">
+ <img alt="Credit: psychopass.wikia.com/wiki/The_Dominator" title="Credit: psychopass.wikia.com/wiki/The_Dominator" src="http://i.imgur.com/FxcYYO4.png"></div>
+ <div class="lethal-eliminatortext">
+  <p><small>300+ and the dominator mode switches to 'lethal eliminator', killing the suspect in a gruesome way (watch the series because I don't know how to describe it... eek!).</small></p></div>
+
+ <div class="destroy-decomposer">
+ <img alt="Credit: psychopass.wikia.com/wiki/The_Dominator" title="Credit: psychopass.wikia.com/wiki/The_Dominator" src="http://i.imgur.com/3McrNxP.png"></div>
+ <div class="destroy-decomposertext">
+  <p><small>If the target is a machine or armoured, the mode engaged is Destroy Decomposer- bad robot :P</small></p></div>
+ <div class="assault">
+ <img alt="Credit: psychopass.wikia.com/wiki/The_Dominator" title="Credit: psychopass.wikia.com/wiki/The_Dominator" src="http://i.imgur.com/mnIbUmf.jpg"></div>
+ <div class="assaulttext">
+  <p><small>There is one more 'mode', as it could be called, but it come in the form of an upgraded gun which can take out multiple target and has a bipod to steady it for the user.</small></p></div>
 <br />
 
 <div class="return">
