--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@
 <br />
 
 <div class="return">
-<h4><a href= "index.html">return to main page</a></h4>
+<h4><a href= "index.html">return to main page-></a></h4>
 <br />
 </div>
 
