corrected spelling errors
corrected spelling errors in last text box

--- a/index3.html
+++ b/index3.html
@@ -40,7 +40,7 @@
  <div class="assault">
  <img alt="Credit: psychopass.wikia.com/wiki/The_Dominator" title="Credit: psychopass.wikia.com/wiki/The_Dominator" src="http://i.imgur.com/mnIbUmf.jpg"></div>
  <div class="assaulttext">
-  <p><small>There is one more 'mode', as it could be called, but it come in the form of an upgraded gun which can take out multiple target and has a bipod to steady it for the user.</small></p></div>
+  <p><small>There is one more 'mode', as it could be called, but it comes in the form of an upgraded gun which can take out multiple targets and has a bipod to steady it for the user.</small></p></div>
 <br />
 
 <div class="return">
